--- a/SeaFight.Core/SeaFight.Core.csproj
+++ b/SeaFight.Core/SeaFight.Core.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rotation.cs" />
     <Compile Include="SeaField.cs" />
+    <Compile Include="ShipFactory.cs" />
     <Compile Include="SimpleShip.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
