Refactored private GetNeighbours in SeaField plus some fixes for Cell, Deck and SimpleShip

--- a/SeaFight/SeaFight.csproj
+++ b/SeaFight/SeaFight.csproj
@@ -79,6 +79,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SeaFight.Core\SeaFight.Core.csproj">
+      <Project>{4EC532AF-F6C1-4476-8AEB-FDABEB31DC79}</Project>
+      <Name>SeaFight.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
